// Copyright (c) Abstract Machines
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package emails.v1;
option go_package = "github.com/absmach/supermq/api/grpc/emails/v1";

// EmailService is a service that provides email-related functionalities
// for SuperMQ services.
service EmailService {
  rpc SendEmail(EmailReq) returns (SendEmailRes) {}
}

enum ContactType {
  ID = 0;
  Email = 1;
}

message EmailReq {
  string from = 1;                    // Sender
  ContactType fromType = 2;           // indicate sender id or email
  repeated string tos = 3;            // recipients
  ContactType toType = 4;             //  indicate recipient id or email
  string subject = 5;                 // Email subject
  string content = 6;                 // Email content/URL  
  optional string template = 10;      // the whole template to be parsed by emailer
  optional string template_file = 11; // template file name to be parsed by emailer
  map<string, string> options = 12;   // map that can be used in template
}

message SendEmailRes {
  string error = 1;
}
